--- a/package.json
+++ b/package.json
@@ -11,13 +11,33 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.2.2",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/localize": "^16.1.0",
+    "@angular/material": "^16.2.2",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@progress/kendo-angular-buttons": "13.3.0",
+    "@progress/kendo-angular-common": "13.3.0",
+    "@progress/kendo-angular-dialog": "13.3.0",
+    "@progress/kendo-angular-icons": "13.3.0",
+    "@progress/kendo-angular-inputs": "^13.3.0",
+    "@progress/kendo-angular-intl": "13.3.0",
+    "@progress/kendo-angular-l10n": "13.3.0",
+    "@progress/kendo-angular-layout": "^13.3.0",
+    "@progress/kendo-angular-navigation": "^13.3.0",
+    "@progress/kendo-angular-popup": "13.3.0",
+    "@progress/kendo-angular-progressbar": "13.3.0",
+    "@progress/kendo-angular-upload": "13.3.0",
+    "@progress/kendo-drawing": "^1.17.2",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-svg-icons": "^1.0.0",
+    "@progress/kendo-theme-bootstrap": "^6.7.0",
+    "@progress/kendo-theme-default": "^6.6.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
